# TuneWrangler

./: .cursorrules  .gitignore  .markdownlint.json  .mise.toml  README.md  deno.json  deno.jsonc  install.sh  package-lock.json  package.json  tsconfig.json  tunewrangler
FileAnalysis/: .eslintrc.js  .gitignore  .prettierrc  bad-matches-1.txt  bad-matches.txt  fix-list-2.txt  fix-list.txt  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tslint.json
FileAnalysis/output/: analysis.csv
FileAnalysis/src/: addRekordboxSongsToYoutube.ts  analyzePlaylists.js  analyzePlaylists.ts  checkBitrate.js  checkCorruptedPlaylists.ts  checkDuplicates.js  checkDuplicates.ts  common.js  common.ts  downloadBadBitrates.ts  formatMusic.js  formatMusic.ts  getYoutubeAuth.ts  renameItunes.js  renameItunes.ts  renameMusic.js  renameMusic.ts  renamePlaylists.ts  retagSongs.ts
SpectralAnalysis/: .gitignore  README.md  index.html  package-lock.json  package.json
SpectralAnalysis/src/: index.ts
docs/: API_REFERENCE.md  FLOW_GUIDE.md  PERFORMANCE.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: README.md  daily-music-processing.sh  dj-workflow.sh  env.example
output/: bangerz.csv  dj-artist-analysis.csv
soundcloud_dl/: .env.example  README.md  pyproject.toml
soundcloud_dl/soundcloud_dl/: __init__.py  config.py  logger.py  main.py  playlist.py
src/: addM3uToYoutubePlaylist.ts  checkBitrate.js  checkCorruptedPlaylists.ts  common.ts  convertFlacs.ts  getYoutubeAuth.ts  renameBandcamp.ts  renameBeatport.ts  renameItunes.ts  renameMusic.ts  retagSongs.ts
src/cli/: main.ts  (+1 more)
(+57 files in other folders)
